--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  text-align: center;
+  color: #fff;
+  background: linear-gradient(to right, rgb(64, 58, 62), rgb(190, 88, 105));
+}
+a{
+  text-decoration: none;
+  color: black;
 }
